--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,9 @@
 html {
   scroll-behavior: smooth;
 }
-
-html,
 body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-body {
+  margin-left: 100px;
+  margin-right: 100px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #151d29;
   background: linear-gradient(340deg, #f6efe0, #d5c0a9);
