--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -1,59 +1,61 @@
+
+
 .container {
     width: 100%;
-    margin: 0 auto;
-    display:inline;
   }
 .header {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #f6efe0;
     top: 0px;
-    left:50%;
-    margin-left: -320px;
-    position: fixed;
     background-color: rgb(162, 169, 151);
-    width: 640px;
-    z-index: 1;
     text-align: center;
-    display: block;
     box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
-    display: inline;
+    background-size: cover;
+    overflow: auto;
+    position: sticky;
+    margin: auto;
+    width: 60%;
+    padding: 2px;
 }
-.about {
+.resume {
+    font-family:monospace;
+    color: #f6efe0;
+    position:relative;
+}
+a:link, a:visited, a:hover {
+    font-family:monospace;
     background-color: transparent;
     border:none;
     color:#f6efe0;
-    width: 100px;
+    margin: 0 auto;
+    display: inline;
+    transition-duration: 0.4s;
+    text-decoration: none;
+    font-size:large;
+  }
+  
+  a:active {
+    background-color: transparent;
+    border:none;
+    color:rgb(162, 169, 151);
+    margin: 0 auto;
+    display: inline;
+    transition-duration: 0.4s;
+  }
+.button {
+    background-color: transparent;
+    border:none;
+    color:rgb(162, 169, 151);
     margin: 0 auto;
     display: inline;
     transition-duration: 0.4s;
 }
-.about:hover {
+.button:hover {
     background-color: rgb(131, 137, 122);
-    color: white;
+    color:rgb(162, 169, 151);
 }
-.education {
-    background-color: transparent;
-    border:none;
-    color:#f6efe0;
-    width: 100px;
-    margin: 0 auto;
-    display: inline;
-    transition-duration: 0.4s;
-}
-.education:hover {
-    background-color: rgb(131, 137, 122);
-    color: white;
-}
-.work {
-    background-color: transparent;
-    border:none;
-    color:#f6efe0;
-    width: 100px;
-    margin: 0 auto;
-    display: inline;
-    transition-duration: 0.4s;
-}
-.work:hover {
-    background-color: rgb(131, 137, 122);
-    color: white;
+
+
+h1{
+  color:rgb(162, 169, 151);
+  text-align: center;
+  font-family: monospace;
 }
