--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -1,7 +1,6 @@
-
-
 .container {
     width: 100%;
+    color:rgb(82, 92, 66);
   }
 .header {
     top: 0px;
@@ -19,6 +18,7 @@
     font-family:monospace;
     color: #f6efe0;
     position:relative;
+    
 }
 a:link, a:visited, a:hover {
     font-family:monospace;
@@ -52,10 +52,57 @@ a:link, a:visited, a:hover {
     background-color: rgb(131, 137, 122);
     color:rgb(162, 169, 151);
 }
-
-
-h1{
-  color:rgb(162, 169, 151);
+.intro {
+  font: 22px/1.1em 'opensans-bold', sans-serif;
+  margin: 0 auto 12px auto;
   text-align: center;
-  font-family: monospace;
+  overflow: hidden;
+  color: #f6efe0;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8);
 }
+.h1 {
+  letter-spacing: -1px;
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+h5{
+  color:rgb(162, 169, 151);
+  font-size: 1.6rem;
+  align-items: center;
+  line-height: 1.875;
+  margin-bottom: 0.3rem;
+  letter-spacing: .4rem;
+  font-size: 18px;
+  line-height: 30px;
+  font-family: 'opensans-bold', sans-serif;
+  font-weight: normal;
+  -webkit-font-variant-ligatures: common-ligatures;
+  -moz-font-variant-ligatures: common-ligatures;
+  font-variant-ligatures: common-ligatures;
+  text-rendering: optimizeLegibility;
+  display: block;
+  font-size: 0.83em;
+  margin-block-start: 1.67em;
+  margin-block-end: 1.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.resize {
+  width: 300px;
+  height: auto;
+}
+.school{
+  display: inline;
+  position: relative;
+}
+
+
