--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
-html {
-  scroll-behavior: smooth;
+.App {
+  text-align: center;
 }
-body {
-  margin-left: 100px;
-  margin-right: 100px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #151d29;
-  background: linear-gradient(340deg, #f6efe0, #d5c0a9);
-}
+
+
