home page almost done

--- a/src/components/common/header/Header.css
+++ b/src/components/common/header/Header.css
@@ -1,12 +1,15 @@
+html{
+    scroll-behavior: smooth;
+}
 .header {
     top: 0px;
-    background-color: rgb(162, 169, 151);
+    background-color: #a2a997;
     text-align: center;
     box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
-    background-size: cover;
     position: sticky;
     margin: auto;
     width: 60%;
     padding: 2px;
+    opacity: 90%;
 }
   
