--- a/src/components/common/navbar/Navbar.css
+++ b/src/components/common/navbar/Navbar.css
@@ -1,13 +1,12 @@
 .navbar {
-  display: flex;
   flex-direction: row;
+  color: #544427;
+  align-items: center;
+  margin: auto;
 }
-
 .navbar-item {
-  display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 30px;
   color: inherit;
   text-decoration: inherit;
   text-transform: uppercase;
@@ -19,9 +18,11 @@ a:link, a:visited, a:hover {
   border:none;
   color:#f6efe0;
   margin: 0 auto;
-  display: inline;
+  display: inline-flex;
   transition-duration: 0.4s;
   text-decoration: none;
   font-size:large;
   letter-spacing:2.5px;
+  margin-right: 15px;
+  margin-left: 15px;
 }
