--- a/src/components/common/home/Home.css
+++ b/src/components/common/home/Home.css
@@ -3,7 +3,7 @@ html{
 }
 .home-block{
     height: 650px;
-    min-height: 500px;
+    min-height: 800px;
     width: 100%;
     background: #161415 url('../../../images/header-background1.jpg') no-repeat top center;
     background-size: cover !important;
@@ -15,16 +15,14 @@ html{
 .noshow {
     display: none;
 }
-
-  
-  h1 {
-    padding-top: 50px;
+h1 {
+    padding-top: 77px;
     background-color: transparent;
     background-image: -webkit-linear-gradient(top, #111, #0c0c0c);
     background-image: -moz-linear-gradient(top, #111, #0c0c0c);
     background-image: -ms-linear-gradient(top, #111, #0c0c0c);
     background-image: -o-linear-gradient(top, #111, #0c0c0c);
-    font-size: 3em;
+    font-size: 4.5em;
     font-family: 'Amethysta', serif;
     text-align: center;
     line-height: 1.4em;
@@ -34,34 +32,48 @@ html{
     color: #fff;
     text-shadow: 2px 2px #000000;
   }
-  
-  span {
+span {
     padding-bottom: 50px;
     color: #fff;
     font-family: 'Amethysta', serif;
-    font-size: 1.5em;
+    font-size: 2em;
     text-transform: lowercase;
     vertical-align: middle;
     letter-spacing: .2em;
     text-shadow: 2px 2px #000000;
-  }
-  
-  .fire {
+}
+.fire {
     animation: animation 1s ease-in-out infinite alternate;
     -moz-animation: animation 1s ease-in-out infinite alternate;
     -webkit-animation: animation 1s ease-in-out infinite alternate;
     -o-animation: animation 1s ease-in-out infinite alternate;
-  }
-  
-  .burn {
+}
+.burn {
     animation: animation .65s ease-in-out infinite alternate;
     -moz-animation: animation .65s ease-in-out infinite alternate;
     -webkit-animation: animation .65s ease-in-out infinite alternate;
     -o-animation: animation .65s ease-in-out infinite alternate;
-  }
+}
+@keyframes animation {
+  0% {
+    top:1px;
+    text-shadow: 0 0 20px #fefcc9,
+    10px -10px 30px #feec85,
+    -20px -20px 40px #ffae34,
+    20px -40px 50px #ec760c,
+    -20px -60px 60px #cd4606,
+    0 -80px 70px #973716,
+    10px -90px 80px #451b0e;}
+  100% {text-shadow: 0 0 20px #fefcc9,
+    10px -10px 30px #fefcc9,
+    -20px -20px 40px #feec85,
+    22px -42px 60px #ffae34,
+    -22px -58px 50px #ec760c,
+    0 -82px 80px #cd4606,
+    10px -90px 80px  #973716;}
+}
   
-  @keyframes animation
-  {
+@-moz-keyframes animation {
   0% {text-shadow: 0 0 20px #fefcc9,
     10px -10px 30px #feec85,
     -20px -20px 40px #ffae34,
@@ -76,10 +88,8 @@ html{
     -22px -58px 50px #ec760c,
     0 -82px 80px #cd4606,
     10px -90px 80px  #973716;}
-  }
-  
-  @-moz-keyframes animation
-  {
+}
+@-o-keyframes animation{
   0% {text-shadow: 0 0 20px #fefcc9,
     10px -10px 30px #feec85,
     -20px -20px 40px #ffae34,
@@ -94,41 +104,8 @@ html{
     -22px -58px 50px #ec760c,
     0 -82px 80px #cd4606,
     10px -90px 80px  #973716;}
-  }
-  
-  @-webkit-keyframes animation
-  {
-  0% {text-shadow: 0 0 20px #fefcc9,
-    10px -10px 30px #feec85,
-    -20px -20px 40px #ffae34,
-    20px -40px 50px #ec760c,
-    -20px -60px 60px #cd4606,
-    0 -80px 70px #973716,
-    10px -90px 80px #451b0e;}
-  100% {text-shadow: 0 0 20px #fefcc9,
-    10px -10px 30px #fefcc9,
-    -20px -20px 40px #feec85,
-    22px -42px 60px #ffae34,
-    -22px -58px 50px #ec760c,
-    0 -82px 80px #cd4606,
-    10px -90px 80px  #973716;}
-  }
-  
-  @-o-keyframes animation
-  {
-  0% {text-shadow: 0 0 20px #fefcc9,
-    10px -10px 30px #feec85,
-    -20px -20px 40px #ffae34,
-    20px -40px 50px #ec760c,
-    -20px -60px 60px #cd4606,
-    0 -80px 70px #973716,
-    10px -90px 80px #451b0e;}
-  100% {text-shadow: 0 0 20px #fefcc9,
-    10px -10px 30px #fefcc9,
-    -20px -20px 40px #feec85,
-    22px -42px 60px #ffae34,
-    -22px -58px 50px #ec760c,
-    0 -82px 80px #cd4606,
-    10px -90px 80px  #973716;}
-  }
-  
+}
+.arrow{
+  margin: 350px;
+  opacity: 90%;
+}
