--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ html {
 }
 body{
   background-color: transparent;
+  justify-content: center;
 }
 h1 {
   padding-top: 70px;
@@ -24,7 +25,6 @@ h1 {
   text-shadow: 1px 1px #000000;
 }
 h2 {
-  padding-top: 50px;
   background-color: transparent;
   background-image: -webkit-linear-gradient(top, #111, #0c0c0c);
   background-image: -moz-linear-gradient(top, #111, #0c0c0c);
@@ -32,13 +32,11 @@ h2 {
   background-image: -o-linear-gradient(top, #111, #0c0c0c);
   font-size: 2.5em;
   font-family: 'Amethysta', serif;
-  text-align: center;
   line-height: 1.4em;
   text-transform: uppercase;
   letter-spacing: .3em;
   white-space:nowrap;
   text-shadow: 1px 1px #000000;
-  margin-top: 2px;
   padding-top: 10px;
 }
 h3 {
@@ -55,45 +53,34 @@ h3 {
   text-transform: uppercase;
   letter-spacing: .3em;
   white-space:nowrap;
-  text-shadow: 1px 1px #000000;
+  text-shadow: -1px -1px #000000;
   margin-top: 2px;
   padding-top: 10px;
 }
 h5 {
-    font-size: 1.6rem;
-    align-items: center;
-    line-height: 1.875;
-    margin-bottom: 0.3rem;
-    letter-spacing: .4rem;
-    font-size: 18px;
-    line-height: 30px;
-    font-family: 'opensans-bold', sans-serif;
-    font-weight: normal;
-    -webkit-font-variant-ligatures: common-ligatures;
-    -moz-font-variant-ligatures: common-ligatures;
-    font-variant-ligatures: common-ligatures;
-    text-rendering: optimizeLegibility;
-    display: block;
-    font-size: 0.83em;
-    margin-block-start: 1.67em;
-    margin-block-end: 1.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    text-align: center;
+  text-align: center;
+  font-size: 1.6rem;
+  line-height: 1.875;
+  margin-bottom: 0.3rem;
+  letter-spacing: .4rem;
+  font-size: 18px;
+  line-height: 30px;
+  font-family: 'opensans-bold', sans-serif;
+  font-weight: normal;
+  -webkit-font-variant-ligatures: common-ligatures;
+  -moz-font-variant-ligatures: common-ligatures;
+  font-variant-ligatures: common-ligatures;
+  text-rendering: optimizeLegibility;
+  font-size: 0.83em;
+  margin-block-start: 1.67em;
+  margin-block-end: 1.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 p {
   display:block;
   width:50%;
   margin: 0 auto;
   background-color: transparent;
-}
-span {
-  padding-bottom: 50px;
-  font-family: 'Amethysta', serif;
-  font-size: 2em;
-  text-transform: lowercase;
-  vertical-align: middle;
-  letter-spacing: .2em;
-  text-shadow: 1px 1px #000000;
 }
