--- a/src/components/common/about/About.css
+++ b/src/components/common/about/About.css
@@ -1,21 +1,55 @@
 .main{
     background-color: transparent;
+    max-width: 700px;
+    margin-left: auto; 
+    margin-right: auto;
+    text-align: center;
+    margin-bottom: 3.6rem;
+    position: relative;
 }
 .selfImg {
-    width: 150px;
-    height: auto;
-    margin: 20px;
-    
+    height: 12rem;
+    width: 12rem;
+    margin: 0rem 0rem 2rem 2rem;
+    float: left;
 }
-.welcome{
-    display: inline-flex;
-    letter-spacing:2.5px;
-    margin-right: 15px;
-    margin-left: 15px;
-    
+.selfDis {
+    text-align: left;
+    padding-left: 13rem;
+    font-size: 1.2rem;
+    line-height: 1.7;
+    margin-top: 4rem;
+    font-weight: 450;
 }
-.welcomeParagraph{
-    font-family: 'opensans-bold', sans-serif;
+.gridContainer{
+    align-items: center;
+}
+span{
+    margin-left: 3px;
+    margin-right: 3px;
+}
+.pdf{
     margin-top: 50px;
-    display: block;
+}
+.button{
+    font: 16px/30px 'Amethysta', serif;
+    background: #11ABB0;
+    display: inline-block;
+    text-decoration: none;
+    letter-spacing: 0;
+    color: #fff;
+    padding: 12px 20px;
+    margin-bottom: 18px;
+    border: none;
+    cursor: pointer;
+    height: auto;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    border-radius: 3px;
 }
