--- a/src/components/common/header/Header.css
+++ b/src/components/common/header/Header.css
@@ -1,15 +1,11 @@
-html{
-    scroll-behavior: smooth;
-}
 .header {
     top: 0px;
-    background-color: transparent;
     text-align: center;
     box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
     position: sticky;
     margin: auto;
     width: 60%;
     padding: 2px;
-    opacity: 65%;
+    flex:1;
 }
   
