--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,22 @@ h3 {
   margin-top: 2px;
   padding-top: 10px;
 }
+h4 {
+  background-color: transparent;
+  background-image: -webkit-linear-gradient(top, #111, #0c0c0c);
+  background-image: -moz-linear-gradient(top, #111, #0c0c0c);
+  background-image: -ms-linear-gradient(top, #111, #0c0c0c);
+  background-image: -o-linear-gradient(top, #111, #0c0c0c);
+  font-size: 1.2em;
+  font-family: 'Amethysta', serif;
+  line-height: 1.4em;
+  text-transform: uppercase;
+  letter-spacing: .3em;
+  white-space:nowrap;
+  text-shadow: -1px -1px #000000;
+  
+  padding-top: 10px;
+}
 h5 {
   text-align: center;
   font-size: 1.6rem;
@@ -75,4 +91,20 @@ h5 {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
+}
+p {
+  font-weight: normal;
+  -webkit-font-variant-ligatures: common-ligatures;
+  -moz-font-variant-ligatures: common-ligatures;
+  font-variant-ligatures: common-ligatures;
+  text-rendering: optimizeLegibility;
+  font-size: 1em;
+  font-weight: bold;
+  font-family: 'opensans-bold', sans-serif;
+  font-weight: normal;
+  -webkit-font-variant-ligatures: common-ligatures;
+  -moz-font-variant-ligatures: common-ligatures;
+  font-variant-ligatures: common-ligatures;
+  text-rendering: optimizeLegibility;
+  font-size: 0.83em;
 }
