--- a/src/components/common/work/Work.css
+++ b/src/components/common/work/Work.css
@@ -10,7 +10,7 @@
     padding-top: 12rem;
     padding-bottom: 15rem;
 }
-h2.exp{
+h2.exp, p.creds, .college{
     color: white;
 }
 .css-jb1ygz-MuiTypography-root{
@@ -18,6 +18,13 @@ h2.exp{
     font-weight: 100;
     font-size: 1rem;
 }
-p.creds{
-    color:white;
+h4.col{
+    color:red;
+    margin: auto;
+}
+h4.col:hover{
+    color: white;
+}
+.school{
+    display: flex;
 }
