--- a/src/components/common/projects/Projects.css
+++ b/src/components/common/projects/Projects.css
@@ -1,3 +1,17 @@
 #portfolio{
     padding-bottom: 15rem;
 }
+.project {
+    max-width: 700px;
+    margin-left: auto; 
+    margin-right: auto;
+    text-align: center;
+    position: relative;
+}
+p.cards{
+    display: inline-flex;
+ }
+.css-1ri6ub7-MuiPaper-root-MuiCard-root{
+    margin-right: 15px;
+    padding: 10px;
+}
