--- a/src/components/common/home/Home.css
+++ b/src/components/common/home/Home.css
@@ -12,29 +12,16 @@
 .noshow {
     display: none;
 }
-.fire {
-  text-shadow: 2px 2px #000000;
-  animation: animation 1s ease-in-out infinite alternate;
-  -moz-animation: animation 1s ease-in-out infinite alternate;
-  -webkit-animation: animation 1s ease-in-out infinite alternate;
-  -o-animation: animation 1s ease-in-out infinite alternate;
-}
-.burn {
-  animation: animation .65s ease-in-out infinite alternate;
-  -moz-animation: animation .65s ease-in-out infinite alternate;
-  -webkit-animation: animation .65s ease-in-out infinite alternate;
-  -o-animation: animation .65s ease-in-out infinite alternate;
-}
 .arrow{
   margin: 350px;
-  opacity: 90%;
 }
-span.fire {
+span.fire{
   padding-bottom: 50px;
-  font-family: 'Amethysta', serif;
   font-size: 2em;
-  text-transform: lowercase;
-  vertical-align: middle;
   letter-spacing: .2em;
+  color:#F2E6CE;
   text-shadow: 2px 2px #000000;
+}
+.photo{
+  margin-right:1500px;
 }
