--- a/src/components/common/experience/Experience.css
+++ b/src/components/common/experience/Experience.css
@@ -5,7 +5,7 @@
     text-align: center;
     position: relative;
 }
-#work {
+#experience {
     background: #1D1D1F;
     padding-bottom: 15rem;
 }
