--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,16 @@
-.App {
-  text-align: center;
-}
+
 html {
   scroll-behavior: smooth;
 }
 body{
   background-color: #F2E6CE;
   justify-content: center;
+  display: flex;
 }
 h1 {
   color:#F2E6CE;
   padding-top: 70px;
   background-color: transparent;
-  background-image: -webkit-linear-gradient(top, #111, #0c0c0c);
-  background-image: -moz-linear-gradient(top, #111, #0c0c0c);
-  background-image: -ms-linear-gradient(top, #111, #0c0c0c);
-  background-image: -o-linear-gradient(top, #111, #0c0c0c);
   font-size: 4em;
   font-family: 'Amethysta', serif;
   text-align: center;
@@ -28,10 +23,6 @@ h1 {
 h2 {
   color: #1D1D1F;
   background-color: transparent;
-  background-image: -webkit-linear-gradient(top, #111, #0c0c0c);
-  background-image: -moz-linear-gradient(top, #111, #0c0c0c);
-  background-image: -ms-linear-gradient(top, #111, #0c0c0c);
-  background-image: -o-linear-gradient(top, #111, #0c0c0c);
   font-size: 3em;
   font-family: 'Amethysta', serif;
   line-height: 1.4em;
@@ -43,10 +34,6 @@ h3 {
   color:#1D1D1F;
   padding-top: 40px;
   background-color: transparent;
-  background-image: -webkit-linear-gradient(top, #111, #0c0c0c);
-  background-image: -moz-linear-gradient(top, #111, #0c0c0c);
-  background-image: -ms-linear-gradient(top, #111, #0c0c0c);
-  background-image: -o-linear-gradient(top, #111, #0c0c0c);
   font-size: 1.5em;
   font-family: 'Amethysta', serif;
   text-align: center;
@@ -60,10 +47,6 @@ h3 {
 }
 h4 {
   background-color: transparent;
-  background-image: -webkit-linear-gradient(top, #111, #0c0c0c);
-  background-image: -moz-linear-gradient(top, #111, #0c0c0c);
-  background-image: -ms-linear-gradient(top, #111, #0c0c0c);
-  background-image: -o-linear-gradient(top, #111, #0c0c0c);
   font-size: 1.2em;
   font-family: 'Amethysta', serif;
   line-height: 1.4em;
@@ -82,10 +65,6 @@ h5 {
   letter-spacing: .4rem;
   line-height: 30px;
   font-family: 'opensans-bold', sans-serif;
-  -webkit-font-variant-ligatures: common-ligatures;
-  -moz-font-variant-ligatures: common-ligatures;
-  font-variant-ligatures: common-ligatures;
-  text-rendering: optimizeLegibility;
   font-size: 0.83em;
   margin-block-start: 1.67em;
   margin-block-end: 1.67em;
