--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: auto;
+}
+#root{
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
 }
 
 code {
