--- a/src/components/common/home/Home.css
+++ b/src/components/common/home/Home.css
@@ -1,21 +1,25 @@
 .home-block{
   width: 100%;
-  background: #161415 url('../../../images/header-background1.jpg') no-repeat top center;
-  background-size: cover !important;
-  -webkit-background-size: cover !important;
+  background: #161415 url('../../../images/header-background1.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   text-align: center;
-  overflow: hidden;
-  top:0px;
+}
+#home{
+  padding-bottom: 10%;
 }
 .noshow {
     display: none;
 }
-.arrow{
-  margin: 350px;
+.arrowButton{
+  align-items: center;
+  margin-top: 25%;
 }
 span.fire{
   padding-bottom: 50px;
-  font-size: 2em;
+  font-size: 2vw;
   letter-spacing: .2em;
   color:#F2E6CE;
   text-shadow: 2px 2px #000000;
