--- a/src/components/common/home/Home.css
+++ b/src/components/common/home/Home.css
@@ -19,7 +19,7 @@
 }
 span.fire{
   padding-bottom: 50px;
-  font-size: 2vw;
+  font-size: 4.6vh;
   letter-spacing: .2em;
   color:#F2E6CE;
   text-shadow: 2px 2px #000000;
