--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body{
 h1 {
   color:#F2E6CE;
   background-color: transparent;
-  font-size: 4vw;
+  font-size: 6vh;
   font-family: 'Amethysta', serif;
   text-align: center;
   line-height: 1.4em;
@@ -30,7 +30,7 @@ h3 {
   color:#1D1D1F;
   padding-top: 40px;
   background-color: transparent;
-  font-size: 1.6vw;
+  font-size: 1.6vh;
   font-family: 'Amethysta', serif;
   text-align: center;
   line-height: 1.4em;
@@ -43,7 +43,7 @@ h3 {
 }
 h4 {
   background-color: transparent;
-  font-size: 1.8vw;
+  font-size: 4vh;
   font-family: 'Amethysta', serif;
   line-height: 1.4em;
   text-transform: uppercase;
